--- a/app/app.css
+++ b/app/app.css
@@ -31,7 +31,11 @@
 
 .market_single{
   background-color: #FFE4C4;
-  height: 100%;
+  height: 530px;
+  border-right: 1px solid white;
+}
+.market_single img{
+  padding-top: 5px;
 }
 
 .templates{
@@ -97,7 +101,7 @@
 }
 
 .jumbotron h1{
-  padding-top: 100px;
+  padding-top: 150px;
   text-align: center;
   color: #000000;
 }
