--- a/app/templates/plant_main.html
+++ b/app/templates/plant_main.html
@@ -3,11 +3,11 @@
 </div>
 <div class="row templates">
 	<div ng-repeat = "template in template_suc">
-		<div class="col-md-4">
+		<div class="col-md-4 temp_single">
 			<h3>{{template.name}}</h3>
 			<img ng-src="images/{{template.images[0].name}}">
 			<h4>{{template.price | currency}} </h4>
-			<a class="btn btn-primary btn-block" href="#/succulents/{{template.id}}">Details</a>
+			<a class="btn btn-primary btn-block" href="#/{{template.type}}/{{template.id}}">Details</a>
 		</div>
 	</div>
 </div>
