--- a/app/templates/template_main.html
+++ b/app/templates/template_main.html
@@ -54,13 +54,13 @@
       <p>Succulents are water retaining plants that can adapt to harsh dry environments. They are extremely easy to care for and are available in variety of shapes, colors, and sizes. Their resilient nature makes them perfect for indoor terrariums as well as outdoor environments. The word "succulent" comes from the Latin word sucus, meaning juice, or sap. Succulent plants may store water in various structures, such as leaves and stems.</p>
       <p><a class="btn btn-default" href="#/succulents" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
+    <div class="col-lg-4 market_single">
       <img class="img-circle" src="images/backgrounds/bondai_bcg_2.jpg" alt="Bonsai Plant image" width="140" height="140">
       <h2>Bonsai Plants</h2>
       <p>Bonsai, which translates to "tree in a pot," originated from China and Japan. It's tiny leathery leaves, dense growth habits and rough bark make it a good bonsai tree subject. The purposes of bonsai are primarily contemplation (for the viewer) and the pleasant exercise of effort and ingenuity (for the grower). By contrast with other plant cultivation practices, bonsai is not intended for production of food or for medicine. Instead, bonsai practice focuses on long-term cultivation and shaping of one or more small trees growing in a container.</p>
       <p><a class="btn btn-default" href="#/bonsai" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
+    <div class="col-lg-4 market_single">
       <img class="img-circle" src="images/backgrounds/airPlants_bcg_1.jpg" alt="Air Plants image" width="140" height="140">
       <h2>Air Plants</h2>
       <p>Most Air Plants are adaptive and hardy enough to be grown indoors with adequate lighting and care, with most types not requiring any soil or such planting medium. Many enthusiasts may attach these plants to other objects. Indoor grown Air Plants generally need to be watered about 1-3 times a week, often by spraying the plant, and occasional feeding with watered down orchid fertilizer. Depending on the species, regular dunking in water may be essential to maintaining their health as well. However, in Nature, Airplants get plenty of air movement to help them dry fast enough, for they are highly susceptible to mold and decay otherwise.</p>
