--- a/app/templates/plant_main.html
+++ b/app/templates/plant_main.html
@@ -3,7 +3,7 @@
 </div>
 <div class="row templates">
 	<div ng-repeat = "template in template_suc">
-		<div class="col-md-4 temp_single">
+		<div class="col-sm-12 col-md-6 col-lg-4 temp_single">
 			<h3>{{template.name}}</h3>
 			<img ng-src="images/{{template.images[0].name}}">
 			<h4>{{template.price | currency}} </h4>
